examples/pos/infer/infer2.effekt
// Example that constructs the following constraint graph:
//
//  <: ?S <: Int
//  <: ?T <: String
//  ?S, ?T <: ?U
//
def foo[S, T, U] { f: (S, T) => U } = <>

def bar() =
  foo { (x, y) =>
    if (true) not(x) else y
  }

def main() = ()
