examples/neg/name-based-implicits/no-implicit.effekt
def foo(?barbaz: String): Unit = ()

def foo{ ?foobaz: => Unit }: Unit = foobaz()

def foobaz(x: String): Unit = ()

def main() = {
  foo()
}